[package]
name = "mpm_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.4"
image = "0.24.5"
tqdm = "0.4.2"
serde = "1.0.152"
serde_json = "1.0.91"
serde_derive = "1.0.152"
rand = "0.8.5"
rand_chacha = "0.3.1"
